# modbus_monitor

./: .env.example  .env.new  .gitignore  CLAUDE.md  Dockerfile.backend  README.md  README_NEW.md  README_UPDATED.md  REFACTOR_SUMMARY.md  USAGE.md  config.conf.example  docker-compose.yml  example_config.py  nginx.conf  pyproject.toml  requirements.txt  start_backend.py  start_dev.sh  start_uv.sh  test_system.sh
backend/: main.py  modbus_service.py  requirements.txt
frontend/: app.js  index.html
frontend/css/: styles.css
